# typst-math-to-mathml-converter

./: .gitignore  Cargo.toml  LICENSE  readme.md
examples/: convert.rs
src/: eval_math.rs  lib.rs  mathml.rs
src/style/: character_variant.rs  italic_exception.rs  mod.rs
tests/: accent_test.rs  attach_test.rs  binom_test.rs  cancel_test.rs  cases_test.rs  class_test.rs  economics_test.rs  main_test.rs  physica.typ  physica_test.rs
